@@ -2,7 +2,7 @@
     "name": "Krastorio2-roboport-mode-colored-textures",
     "title": "Krastorio2 - roboport mode colored textures",
     "description": "The rings of the roboport will be tinted normal/green/orange based on which mode is selected.",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "author": "Quezler",
     "factorio_version": "2.0",
     "dependencies": [
@@ -10,6 +10,7 @@
 
         "base",
 
-        "Krastorio2"
+        "?Krastorio2",
+        "?Krastorio2-spaced-out"
     ]
 }
