@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.1
-Date: ????
+Date: 2025. 05. 09
   Info:
     - Update dependencies
+    - Support spaced out
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 2025. 04. 11
